tests/e2e/condensed_when_fail2.story
try
  when listen path:"/health" method:"get" as client
  	x = 0
